# skyweb

./: .gitignore  CNAME  Cargo.toml  index.html  skyweb-1b6c8a521cd5448e.js  skyweb-2fb4312158eae815.js  style.css
.github/workflows/: deploy.yml
src/: ask.rs  attraction.rs  avatar.rs  bsky.rs  camera.rs  compat.rs  config.rs  connect.rs  game.rs  main.rs  request.rs
