[package]
name = "skyweb"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = "0.25"
atrium-xrpc-client = "0.5"
bevy = { version = "0.16", default-features = false , features = [
    "x11",
    "wayland",
    "bevy_asset",
    "bevy_state",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "jpeg",
    "multi_threaded",
]}
bevy_dylib = "0.16"
bevy_web_asset = { version = "0.11", default-features = false } # no redirection needed
bevy-inspector-egui = "0.32"
bevy-tokio-tasks = "0.16"
bevy_simple_text_input = "0.11"
avian2d = "0.3"
webbrowser = "1.0"

[profile.dev.package."*"]
opt-level = 3

