[package]
name = "skyweb"
version = "0.1.0"
edition = "2024"

[dependencies]
atrium-api = "0.25"
atrium-xrpc-client = "0.5"
pin-project-lite = "0.2"
bevy = { version = "0.16", default-features = false , features = [
    "x11",
    "wayland",
    "bevy_asset",
    "bevy_state",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "jpeg",
    "webgl2",
    "multi_threaded",
]}
bevy_web_asset = { version = "0.11", default-features = false } # no redirection needed
bevy_egui = "0.36"
avian2d = "0.3"
webbrowser = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread"] }
bevy_dylib = "0.16"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.47", features = ["rt"] }

[profile.dev.package."*"]
opt-level = 3

