[package]
name = "skyweb"
version = "1.0.0"
edition = "2024"

[dependencies]
atrium-api = "0.25"
atrium-xrpc-client = "0.5"
ipld-core = "0.4"
reqwest = "0.12"
serde_json = "1.0"
pin-project-lite = "0.2"
bevy = { version = "0.16", default-features = false , features = [
    "x11",
    "wayland",
    "bevy_asset",
    "bevy_state",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "jpeg",
    "png",
    "webgl2",
    "multi_threaded",
]}
bevy_egui = "0.36"
webbrowser = "1.0"
fjadra = "0.2"
colorous = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread"] }
bevy_dylib = "0.16"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.47", features = ["rt"] }

[profile.dev.package."*"]
opt-level = 3

